--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="rsa-container">
             <h3>Generate Private & Public Keys</h3>
             <section class="step-section">
-                <form>
+                <form id="rsa-form">
                     <fieldset>
-                        <legend><strong>Enter two prime numbers P and Q:</strong></legend>
+                        <legend><strong>Enter two prime numbers P & Q:</strong></legend>
                         <label for="p" style="display: inline-block; width: 20px;"><b>P: </b></label>
                         <input type="text" id="p" style="margin-bottom: 5px;"><br>
                         <label for="q" style="display: inline-block; width: 20px;"><b>Q: </b></label>
@@ -29,10 +29,9 @@
                 </form>
                 <p>
                     <strong>Note: </strong><b>P</b> & <b>Q</b> should be greater than <b>8</b> and <b>7</b> respectively.<br>
-                    <span style="color: #70706d;"><em>Choosing small prime numbers must be avoided, as the factorization of the RSA modulus will become trivial.</em></span>
+                    <span style="color: red;"><strong>Choosing small prime numbers must be avoided, as the factorization of the RSA modulus will become trivial.</strong></span>
                 </p>
-                <p><strong><span id="not-prime" style="color: red"></span></strong></p>
-                <p><button type="button" class="button" onclick="calculate()">Calculate</button></p>
+                <p><button type="button" class="button" style="margin-right: 5px;" onclick="calculate()">Calculate</button><button type="button" class="button" onclick="resetForm()">Reset</button></p>
             </section>
             <section class="step-section" style="margin-top: 15px;">
                 <div style="overflow-x: auto;">
@@ -100,7 +99,7 @@
             </section>
             <h3>Decrypt a Message</h3>
             <section class="step-section">
-                <p><label for="encrypted-message-textbox" style="display: inline-block;">Enter an encrypted message to decrypt:</label>
+                <p><label for="encrypted-message-textbox">Enter an encrypted message to decrypt:</label>
                 <input type="text" id="encrypted-message-textbox" readonly></p>
                 <p><button type="button" class="button" onclick="decryptMessage()">Decrypt</button></p>
                 <p>
