--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+* * * * * * * * Assignment-07 * * * * * * * *
+* Name: Ravindra Dilipbhai Mevada           *
+* En. No.: 180390107013                     *
+* Subject: Information Security             *
+* Task: RSA Algorithm Implementation        *
+* * * * * * * * * * * * * * * * * * * * * * *
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,7 +39,7 @@
                     <strong>Note: </strong><b>P</b> & <b>Q</b> should be greater than <b>8</b> and <b>7</b> respectively.<br>
                     <span style="color: red;"><strong>Choosing small prime numbers must be avoided, as the factorization of the RSA modulus will become trivial.</strong></span>
                 </p>
-                <p><button type="button" class="button" style="margin-right: 5px;" onclick="calculate()">Calculate</button><button type="button" class="button" onclick="resetForm()">Reset</button></p>
+                <p><button type="button" class="button" style="margin-right: 5px;" onclick="calculate()">Calculate</button><button type="button" class="button" onclick="reset()">Reset</button></p>
             </section>
             <section class="step-section" style="margin-top: 15px;">
                 <div style="overflow-x: auto;">
