--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h3>Decrypt a Message</h3>
             <section class="step-section">
                 <p><label for="encrypted-message-textbox">Enter an encrypted message to decrypt:</label>
-                <input type="text" id="encrypted-message-textbox" readonly></p>
+                <input type="text" id="encrypted-message-textbox"></p>
                 <p><button type="button" class="button" onclick="decryptMessage()">Decrypt</button></p>
                 <p>
                     <strong>Decrypted Message: <span id="decrypted-message" style="color: blue;"></span></strong><br>
